--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+	font-size: 17px;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -17,8 +18,6 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-	--display-logo: none;
 }
 
 a {
@@ -34,10 +33,27 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  justify-content: stretch;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
+
+main {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	align-items: center;
+	padding: 1rem 3rem;
+	max-width: 1100px;
+	box-sizing: border-box;
+	align-self: center;
+}
+
+.centered {
+	text-align: center;
+}
+
+.big { font-size: 1.35rem; font-weight: 500; }
 
 @media (prefers-color-scheme: light) {
   :root {
