--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,19 +11,6 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
 <html lang="en">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-    <style>
-      h1 {
-        font-size: 3rem;
-      }
-      .intro-blurb {
-        font-size: 1.35rem;
-        text-align: center;
-      }
-			ul {
-				margin: 0;
-				padding-block: 0.5rem;
-			}
-    </style>
   </head>
   <body>
     <main>
@@ -108,6 +95,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
 					<li>Cloudflare Workers</li>
         </ul>
         This site was made with Astro so I can look into how to use it
+      </QnA>
     </main>
     <Footer />
   </body>
