--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const today = new Date();
 </footer>
 <style>
 	footer {
-		padding: 2em 1em 3em 1em;
+		padding: 1.5em;
 		color: rgb(var(--gray));
 		text-align: center;
 	}
