--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -1,26 +1,12 @@
 ---
+import IconLink from "./IconLink.astro";
+
 const {hide} = Astro.props;
 ---
 
 <div class="social-links">
-  <a href="https://bsky.djpiplup.dev" target="_blank"  class={hide ? 'hide-content' : ''}>
-    <span class="sr-only">Visit DJPiplup on Bluesky</span>
-    <svg viewBox="0 0 24 24" viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
-      ><path
-        fill="currentColor"
-        d="M6.335 4.212c2.293 1.76 4.76 5.327 5.665 7.241.906-1.914 3.372-5.482 5.665-7.241C19.319 2.942 22 1.96 22 5.086c0 .624-.35 5.244-.556 5.994-.713 2.608-3.315 3.273-5.629 2.87 4.045.704 5.074 3.035 2.852 5.366-4.22 4.426-6.066-1.111-6.54-2.53-.086-.26-.126-.382-.127-.278 0-.104-.041.018-.128.278-.473 1.419-2.318 6.956-6.539 2.53-2.222-2.331-1.193-4.662 2.852-5.366-2.314.403-4.916-.262-5.63-2.87C2.35 10.33 2 5.71 2 5.086c0-3.126 2.68-2.144 4.335-.874Z"
-      ></path></svg
-    >
-  </a>
-  <a href="https://github.com/dj-piplup" target="_blank"  class={hide ? 'hide-content' : ''}>
-    <span class="sr-only">Visit DJPiplup on GitHub</span>
-    <svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
-      ><path
-        fill="currentColor"
-        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-      ></path></svg
-    >
-  </a>
+  <IconLink href="https://bsky.djpiplup.dev" icon="bluesky" hide={hide} screenReader="Visit DJPiplup on Bluesky"/>
+  <IconLink href="https://github.com/dj-piplup" icon="github" hide={hide} screenReader="Visit DJPiplup on GitHub"/>
 </div>
 <style>
 	.social-links {
@@ -29,14 +15,4 @@ const {hide} = Astro.props;
 		gap: 1em;
 		margin-top: 1em;
 	}
-	.social-links a {
-		text-decoration: none;
-		color: rgb(var(--gray));
-	}
-	.social-links a:hover {
-		color: rgb(var(--gray-dark));
-	}
-  .hide-content {
-    color: transparent !important;
-  }
 </style>
