--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,11 +8,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-	font-size: 17px;
+  font-size: 17px;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(#14002A, #102 15%, #040010 75%);
+  background: linear-gradient(#14002a, #102 15%, #040010 75%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -39,21 +39,38 @@ body {
 }
 
 main {
-	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
-	align-items: center;
-	padding: 1rem 3rem;
-	max-width: 1100px;
-	box-sizing: border-box;
-	align-self: center;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  align-items: center;
+  padding: 1rem 3rem;
+  max-width: 1100px;
+  box-sizing: border-box;
+  align-self: center;
 }
 
-.centered {
-	text-align: center;
+h1 {
+  font-size: 3rem;
+}
+h1,h2,h3,h4,h5,h6,p {
+  margin-block: 0;
 }
 
-.big { font-size: 1.35rem; font-weight: 500; }
+ul {
+  margin: 0;
+  padding-block: 0.5rem;
+}
+
+.big {
+  font-size: 1.35rem;
+  font-weight: 500;
+}
+
+.intro-blurb {
+  font-size: 1.35rem;
+  text-align: center;
+  margin-block: 1rem;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -62,19 +79,19 @@ main {
   }
 }
 .sr-only {
-	border: 0;
-	padding: 0;
-	margin: 0;
-	position: absolute !important;
-	height: 1px;
-	width: 1px;
-	overflow: hidden;
-	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
-	clip: rect(1px 1px 1px 1px);
-	/* maybe deprecated but we need to support legacy browsers */
-	clip: rect(1px, 1px, 1px, 1px);
-	/* modern browsers, clip-path works inwards from each corner */
-	clip-path: inset(50%);
-	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
-	white-space: nowrap;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
+  clip: rect(1px 1px 1px 1px);
+  /* maybe deprecated but we need to support legacy browsers */
+  clip: rect(1px, 1px, 1px, 1px);
+  /* modern browsers, clip-path works inwards from each corner */
+  clip-path: inset(50%);
+  /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
+  white-space: nowrap;
 }
