--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ const { hideLogo, hideLinks } = Astro.props;
 
 <header>
   <nav>
-    <h2><a href="/" class={hideLogo ? 'hide-content' : ''} inert={hideLogo || null}>{SITE_TITLE}</a></h2>
+    <h2><a href="/" class={hideLogo ? 'hide-content' : ''} inert={hideLogo || null}><img class='header-pfp' src='/favicon.png'/>&nbsp;{SITE_TITLE}</a></h2>
     <div class="internal-links">
       <HeaderLink href="/">Home</HeaderLink>
       <HeaderLink href="/projects">Projects</HeaderLink>
@@ -21,11 +21,16 @@ const { hideLogo, hideLinks } = Astro.props;
   header {
     margin: 0;
     padding: 0 1em;
-    box-shadow: 0 2px 8px #0002;
 		width: 100vw;
 		box-sizing: border-box;
-		position: sticky;
-		top: 0;
+  }
+  .header-pfp {
+    display: inline;
+    height: 1em;
+    margin: 0;
+    padding: 0;
+    padding-top: 2px;
+    aspect-ratio: 1/1;
   }
   h2 {
     margin: 0;
@@ -35,10 +40,12 @@ const { hideLogo, hideLinks } = Astro.props;
   h2 > a,
   h2 > a.active {
     text-decoration: none;
+    display: flex;
+    align-items: center;
   }
 
 	.hide-content {
-		color: transparent !important;
+		opacity: 0;
 	}
 
   nav {
