--- a/src/layouts/FigurePage.astro
+++ b/src/layouts/FigurePage.astro
@@ -17,26 +17,27 @@ const { title, description, pubDate, updatedDate, figureImage, boxImages } = Ast
 		<style>
 			main {
 				width: calc(100% - 2em);
-				max-width: 100%;
+				max-width: 1450px;
 				margin: 0;
 			}
 			article {
 				display: grid;
 				grid-template-columns: 600px auto;
+				grid-template-rows: min-content;
 			}
 			.image {
 				width: 100%;
+				padding-bottom: 1em;
 			}
 			.prose {
-				width: 720px;
-				max-width: calc(100% - 2em);
+				width: 100%;
+				height: 100%;
+				min-width: 450px;
 				margin: auto;
 				padding: 1em;
-				color: rgb(var(--gray-dark));
 			}
 			.title {
 				margin-bottom: 1em;
-				padding: 1em 0;
 				text-align: center;
 				line-height: 1;
 			}
@@ -50,9 +51,9 @@ const { title, description, pubDate, updatedDate, figureImage, boxImages } = Ast
 			.last-updated-on {
 				font-style: italic;
 			}
-			@media screen and (max-width: 800px) {
+			@media screen and (max-width: 1100px) {
 				article {
-					grid-template-columns: 300px auto;
+					grid-template-columns: 600px;
 				}
 			}
 		</style>
@@ -63,7 +64,7 @@ const { title, description, pubDate, updatedDate, figureImage, boxImages } = Ast
 		<main>
 			<article>
 				<div class="image">
-					<Gallery imgSrcs={[figureImage, boxImages].flat()}/>
+					<Gallery imgSrcs={[figureImage, boxImages ?? []].flat()}/>
 				</div>
 				<div class="prose">
 					<div class="title">
