--- a/src/pages/figures/index.astro
+++ b/src/pages/figures/index.astro
@@ -18,83 +18,48 @@ const posts = (await getCollection('figures')).sort(
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<style>
 			main {
-				width: 960px;
+				max-width: 1650px;
+				--text-margin: 4px;
 			}
-			ul {
+			section {
 				display: flex;
+				width: 100%;
 				flex-wrap: wrap;
+				justify-content: center;
 				gap: 2rem;
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
 			}
-			ul li {
-				width: calc(50% - 1rem);
+			article a {
+				color: var(--base-text-color);
+				&:hover {
+					color: color-mix(in srgb, var(--base-text-color) 60%, var(--link-hover) 40%)
+				}
 			}
-			ul li * {
-				text-decoration: none;
-				transition: 0.2s ease;
-			}
-			ul li:first-child {
+			article img {
 				width: 100%;
-				margin-bottom: 1rem;
-				text-align: center;
-			}
-			ul li:first-child img {
-				width: 100%;
-			}
-			ul li:first-child .title {
-				font-size: 2.369rem;
-			}
-			ul li img {
 				margin-bottom: 0.5rem;
 				border-radius: 12px;
 			}
-			ul li a {
-				display: block;
-			}
 			.title {
 				margin: 0;
-				color: rgb(var(--black));
+				margin-inline: var(--text-margin);
 				line-height: 1;
 			}
 			.date {
 				margin: 0;
-				color: rgb(var(--gray));
-			}
-			ul li a:hover h4,
-			ul li a:hover .date {
-				color: rgb(var(--accent));
-			}
-			ul a:hover img {
-				box-shadow: var(--box-shadow);
-			}
-			@media (max-width: 720px) {
-				ul {
-					gap: 0.5em;
-				}
-				ul li {
-					width: 100%;
-					text-align: center;
-				}
-				ul li:first-child {
-					margin-bottom: 0;
-				}
-				ul li:first-child .title {
-					font-size: 1.563em;
-				}
+				margin-inline: var(--text-margin);
 			}
 		</style>
 	</head>
 	<body>
 		<Header />
 		<main>
+			<h2>My Figures</h2>
+			<p>This is a gallery of the figures I own. Mostly, I wanted a place to put images of the boxes because I would probably hoard them otherwise. At the moment, this is still a work in progress, but the remaining work is mostly data entry</p>
 			<section>
-				<ul>
 					{
 						posts.map((post) => (
-							<li>
-								<a href={`/figure/${post.id}/`}>
+							<article>
+								<a href={`/figures/${post.id}/`}>
 									{post.data.figureImage && (
 										<Image width={360} height={480} src={post.data.figureImage} alt="" />
 									)}
@@ -103,10 +68,9 @@ const posts = (await getCollection('figures')).sort(
 										<FormattedDate date={post.data.pubDate} />
 									</p>
 								</a>
-							</li>
+							</article>
 						))
 					}
-				</ul>
 			</section>
 		</main>
 		<Footer />
