--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,6 +29,10 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
         If you knew 'DJPiplup' before like, 2012, there's a good chance it was
         him and not me. Otherwise: hello again :)
       </QnA>
+      <QnA question="What's that bird PFP?">
+        That is a little bird sitting on the shoulder of Marianne from Fire Emblem 3 Houses in one of my favorite fanarts ever.
+        Art is by KKonisa, who seems to have disappeared from the internet, unfortunately
+      </QnA>
       <QnA question="Fan of things video game/anime? Like what?">
         There is a lot of stuff that I'm at least aware of and enjoy
         tangentially, but the list of things I've actually watched/played and
