finalize and move to main domain

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -47,7 +47,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
         </Project>
         <Project
           title="HoloCure Randomizer"
-          website="https://qrpaste.djpiplup.dev/"
+          website="https://holocure-randomizer.web.app/"
           github="https://github.com/dj-piplup/holocure-randomizer"
         >
           Randomly picks a HoloCure character from the ones in the game. This
